Fixed broken layouts

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -67,7 +67,8 @@ body {
 }
 
 .page {
-	
+	width: 100%;
+	height: 100%;
 }
 
 #main-container {
